--- a/AspNetCore/AspNetCore/AspNetCore.csproj
+++ b/AspNetCore/AspNetCore/AspNetCore.csproj
@@ -4,7 +4,7 @@
     <Authors>Meyer</Authors>
     <Description>AspNetCore setup extensions and helpers</Description>
     <Copyright>Copyright 2019</Copyright>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Version>1.0.0.0</Version>
     <PackageVersion>1.0.0.0</PackageVersion>
     <AssemblyName>Meyer.Common.AspNetCore</AssemblyName>
@@ -13,13 +13,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.HealthChecks" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="3.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.0.0" />
   </ItemGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>bin\Release\netstandard2.0\Meyer.Common.AspNetCore.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\netstandard2.1\Meyer.Common.AspNetCore.xml</DocumentationFile>
   </PropertyGroup>
   
 </Project>
