--- a/AspNetCore/AspNetCore/AspNetCore.csproj
+++ b/AspNetCore/AspNetCore/AspNetCore.csproj
@@ -4,7 +4,7 @@
     <Authors>Meyer</Authors>
     <Description>AspNetCore setup extensions and helpers</Description>
     <Copyright>Copyright 2019</Copyright>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Version>1.0.0.0</Version>
     <PackageVersion>1.0.0.0</PackageVersion>
     <AssemblyName>Meyer.Common.AspNetCore</AssemblyName>
@@ -12,12 +12,15 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>bin\Release\netcoreapp3.0\Meyer.Common.AspNetCore.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\net6.0\Meyer.Common.AspNetCore.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.0.0" />
+    <PackageReference Include="Asp.Versioning.Http" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="6.0.1" />
+    <PackageReference Include="Serilog.Expressions" Version="3.4.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.4.0" />
   </ItemGroup>
   
 </Project>
